force-app/main/default/objects/SurveyItem__c/SurveyItem__c.object-meta.xml
<CustomObject>
    <description>Хранит результаты ответа на один вопрос</description>
    <label>SurveyItem</label>
    <nameField>
        <label>SurveyItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>