force-app/main/default/objects/SurveyItem__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Выбранный ответ на заданный вопрос</description>
    <label>Answer</label>
    <length>64</length>
    <type>Text</type>
</CustomField>