force-app/main/default/objects/SurveyItem__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Вопрос заданный при опросе</description>
    <label>Question</label>
    <length>64</length>
    <type>Text</type>
</CustomField>