force-app/main/default/objects/SurveyItem__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <description>Ссылка на объект опроса</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>SurveyItems</relationshipLabel>
    <relationshipName>SurveyItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>